--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-STORAGE_TYPE = postgres
-POSTGRES_HOST = localhost
-POSTGRES_PORT = 5432
-POSTGRES_USER = postgres
-POSTGRES_PASSWORD = password
-POSTGRES_DATABASE = graphql_comments
+STORAGE_TYPE=postgres; # postgres | in-memory
+POSTGRES_HOST=postgresql
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_DATABASE=postgres
